--- a/assets/css/learn_html.css
+++ b/assets/css/learn_html.css
@@ -138,6 +138,13 @@ dl.definition_list_styling {
 
 /***********************************************************************************************************************
 LESSON 04. HTML LINKS
+***********************************************************************************************************************/
+
+.linking_page_sections {
+	height: 500px;
+}
+
+/***********************************************************************************************************************
 LESSON 05. HTML COLOR NAMES & VALUES
 LESSON 06. HTML FORMS
 LESSON 07. HTML MEDIA
