--- a/assets/css/learn_html.css
+++ b/assets/css/learn_html.css
@@ -146,6 +146,18 @@ LESSON 04. HTML LINKS
 
 /***********************************************************************************************************************
 LESSON 05. HTML COLOR NAMES & VALUES
+***********************************************************************************************************************/
+
+.html_color_names,
+.html_rgb_colors,
+.html_rgba_colors,
+.html_hex_colors,
+.html_hsl_colors,
+.html_hsla_colors {
+	height: 50px;
+}
+
+/***********************************************************************************************************************
 LESSON 06. HTML FORMS
 LESSON 07. HTML MEDIA
 LESSON 08. HTML HEADER
