--- a/assets/css/web-basics.css
+++ b/assets/css/web-basics.css
@@ -25,14 +25,14 @@ nav {}
 div {}
 span {}
 
-/*********************************************************************************************************************** 
-HEADINGS 
-***********************************************************************************************************************/	
+/***********************************************************************************************************************
+HEADINGS
+***********************************************************************************************************************/
 h1, h2, h3, h4, h5, h6 {}
 
 h1 {
 	font-size: 28px;
-px}
+}
 
 h2 {
 	font-size: 26px;
@@ -184,7 +184,7 @@ WEB COMPONENTS
 ***********************************************************************************************************************/
 slot {}
 template {}
-::part() {}
+/*::part() {}*/
 ::slotted() {}
 
 /***********************************************************************************************************************
