--- a/assets/css/learn-html.css
+++ b/assets/css/learn-html.css
@@ -350,7 +350,11 @@ body {
 /***********************************************************************************************************************
 LESSON 10. HTML GRAPHICS
 ***********************************************************************************************************************/
-
+.html-canvas {
+  width: auto;
+  height: auto;
+  margin: 20px;
+}
 
 /***********************************************************************************************************************
 LESSON 11. HTML APIs
