--- a/assets/css/learn-html.css
+++ b/assets/css/learn-html.css
@@ -350,6 +350,7 @@ body {
 /***********************************************************************************************************************
 LESSON 10. HTML GRAPHICS
 ***********************************************************************************************************************/
+
 .html-canvas {
   width: auto;
   height: auto;
@@ -360,39 +361,36 @@ LESSON 10. HTML GRAPHICS
 LESSON 11. HTML APIs
 ***********************************************************************************************************************/
 
+.box-a,
+.box-b {
+  display: inline-block;
+  padding: 10px;
+  margin: 10px;
+  -moz-user-select: none;
+}
+
+.box-a {
+  background-color: #6633ff;
+  width: 75px;
+  height: 75px;
+}
+
+.box-b {
+  background-color: #FF6699;
+  width: 150px;
+  height: 150px;
+}
 
 /***********************************************************************************************************************
-LESSON 12. HTML MISCELLANEOUS
+LESSON 12. HTML DEMO
 ***********************************************************************************************************************/
 
 
 /***********************************************************************************************************************
-LESSON 13. HTML DEMO
+LESSON 13. HTML5 INTRODUCTION
 ***********************************************************************************************************************/
 
 
 /***********************************************************************************************************************
-LESSON 14. HTML TOOLS
+LESSON 15. HTML5 USEFUL REFERENCES
 ***********************************************************************************************************************/
-
-
-/***********************************************************************************************************************
-LESSON 15. HTML REFERENCES
-***********************************************************************************************************************/
-
-
-/***********************************************************************************************************************
-LESSON 16. HTML RESOURCES
-***********************************************************************************************************************/
-
-
-/***********************************************************************************************************************
-LESSON 17. HTML5 INTRODUCTION
-***********************************************************************************************************************/
-
-
-/***********************************************************************************************************************
-LESSON 18. HTML5 USEFUL REFERENCES
-***********************************************************************************************************************/
-
-
