--- a/assets/css/learn-css.css
+++ b/assets/css/learn-css.css
@@ -1,4 +1,23 @@
 /***********************************************************************************************************************
+    HOME
+***********************************************************************************************************************/
+.home div {
+  border: 5px inset gold;
+  background-color: black;
+  text-align: center;
+  width: 350px;
+}
+
+.home div h1{
+  color: #36CFFF;
+}
+
+.home div p{
+  font-size: 1.5em;
+  color: white;
+}
+
+/***********************************************************************************************************************
     ROADMAP
 ***********************************************************************************************************************/
 
@@ -721,5 +740,3 @@
 /***********************************************************************************************************************
     CSS MEDIA QUERIES
 ***********************************************************************************************************************/
-
-
