--- a/assets/css/learn-css.css
+++ b/assets/css/learn-css.css
@@ -1,46 +1,50 @@
+@import url("style.css");
+
 /***********************************************************************************************************************
     HOME
 ***********************************************************************************************************************/
-.home div {
-  border: 5px inset gold;
-  background-color: black;
-  text-align: center;
-  width: 350px;
+.home {
+  & div {
+    border: 5px inset gold;
+    background-color: black;
+    text-align: center;
+    width: 350px;
+  }
+
+  & div h1{
+    color: #36CFFF;
+  }
+
+  & p{
+    font-size: 1.5em;
+    color: white;
+  }
 }
-
-.home div h1{
-  color: #36CFFF;
-}
-
-.home div p{
-  font-size: 1.5em;
-  color: white;
-}
-
-/***********************************************************************************************************************
-    ROADMAP
-***********************************************************************************************************************/
-.roadmap {}
-
-/***********************************************************************************************************************
-    INTRODUCTION
-***********************************************************************************************************************/
-.introduction {}
 
 /***********************************************************************************************************************
     SYNTAX
 ***********************************************************************************************************************/
-.syntax {}
+.syntax {
+  & p {
+    background-color: black;
+    color: white;
+    padding: 5px;
+  }
 
-/***********************************************************************************************************************
-    INCLUSION
-***********************************************************************************************************************/
-.inclusion {}
+  & .special {
+    color: red;
+  }
+}
 
 /***********************************************************************************************************************
     TYPES
 ***********************************************************************************************************************/
-.types {}
+.types {
+  & .external-css {
+    color: blue;
+    font-family: Verdana, sans-serif;
+  }
+}
 
 /***********************************************************************************************************************
     MEASUREMENT UNITS
@@ -73,6 +77,11 @@
 .id-selectors {}
 
 /***********************************************************************************************************************
+    ATTR SELECTORS
+***********************************************************************************************************************/
+.attr-selectors {}
+
+/***********************************************************************************************************************
     GROUP SELECTORS
 ***********************************************************************************************************************/
 .group-selectors {}
@@ -88,14 +97,29 @@
 .descendant-selectors {}
 
 /***********************************************************************************************************************
+    GENERAL SIBLING SELECTORS
+***********************************************************************************************************************/
+.general-sibling-selectors {}
+
+/***********************************************************************************************************************
     ADJACENT SIBLING SELECTORS
 ***********************************************************************************************************************/
 .adjacent-sibling-selectors {}
 
 /***********************************************************************************************************************
-    GENERAL SIBLING SELECTORS
+    PSEUDO ELEMENTS
 ***********************************************************************************************************************/
-.general-sibling-selectors {}
+.pseudo-elements {}
+
+/***********************************************************************************************************************
+    PSEUDO CLASSES
+***********************************************************************************************************************/
+.pseudo-classes {}
+
+/***********************************************************************************************************************
+    COMBINATORS
+***********************************************************************************************************************/
+.combinators {}
 
 /***********************************************************************************************************************
     COLORS
@@ -201,11 +225,6 @@
     OUTLINES
 ***********************************************************************************************************************/
 .outlines {}
-
-/***********************************************************************************************************************
-    COMMENTS
-***********************************************************************************************************************/
-.comments {}
 
 /***********************************************************************************************************************
     DATA TYPES
@@ -376,26 +395,6 @@
     BORDER INLINE
 ***********************************************************************************************************************/
 .border-inline {}
-
-/***********************************************************************************************************************
-    ATTR SELECTORS
-***********************************************************************************************************************/
-.attr-selectors {}
-
-/***********************************************************************************************************************
-    COMBINATORS
-***********************************************************************************************************************/
-.combinators {}
-
-/***********************************************************************************************************************
-    PSEUDO CLASSES
-***********************************************************************************************************************/
-.pseudo-classes {}
-
-/***********************************************************************************************************************
-    PSEUDO ELEMENTS
-***********************************************************************************************************************/
-.pseudo-elements {}
 
 /***********************************************************************************************************************
     HOVER
