--- a/assets/css/learn-css.css
+++ b/assets/css/learn-css.css
@@ -150,79 +150,133 @@
   & .relativeunit-dvh {
     font-size: 4dvh;
   }
-
-
 }
 
 /***********************************************************************************************************************
     SELECTORS
 ***********************************************************************************************************************/
-.selectors {}
+.selectors {
+  & .universal-selectors {
+    & * {
+      color: green;
+    }
+  }
 
-/***********************************************************************************************************************
-    UNIVERSAL SELECTORS
-***********************************************************************************************************************/
-.universal-selectors {}
+  & .element-selectors {
+    & p {
+      color: purple;
+    }
 
-/***********************************************************************************************************************
-    ELEMENT SELECTORS
-***********************************************************************************************************************/
-.element-selectors {}
+    & div {
+      color: darkolivegreen;
+    }
 
-/***********************************************************************************************************************
-    CLASS SELECTORS
-***********************************************************************************************************************/
-.class-selectors {}
+    & span {
+      color: sandybrown;
+    }
+  }
 
-/***********************************************************************************************************************
-    ID SELECTORS
-***********************************************************************************************************************/
-.id-selectors {}
+  & .class-selectors {
+    & .cs {
+      color: yellow;
+    }
+  }
 
-/***********************************************************************************************************************
-    ATTR SELECTORS
-***********************************************************************************************************************/
-.attr-selectors {}
+  & .id-selectors {
+    & #ids {
+      color: blue;
+      text-decoration: underline;
+    }
+  }
 
-/***********************************************************************************************************************
-    GROUP SELECTORS
-***********************************************************************************************************************/
-.group-selectors {}
+  & .attr-selectors {
+    & a[target] {
+      background-color: lightcoral;
+    }
 
-/***********************************************************************************************************************
-    CHILD SELECTORS
-***********************************************************************************************************************/
-.child-selectors {}
+    & a[target="_blank"] {
+      background-color: peachpuff;
+    }
 
-/***********************************************************************************************************************
-    DESCENDANT SELECTORS
-***********************************************************************************************************************/
-.descendant-selectors {}
+    & a[href="https://github.com/wasulabenjamin"] {
+      background-color: lightskyblue;
+    }
+  }
 
-/***********************************************************************************************************************
-    GENERAL SIBLING SELECTORS
-***********************************************************************************************************************/
-.general-sibling-selectors {}
+  & .group-selectors {
+    & p, 
+    & div, 
+    & span {
+      background-color: peachpuff;
+    }
 
-/***********************************************************************************************************************
-    ADJACENT SIBLING SELECTORS
-***********************************************************************************************************************/
-.adjacent-sibling-selectors {}
+    & p,
+    & #gs,
+    & .gs {
+      padding: 5px;
+    }
+  }
 
-/***********************************************************************************************************************
-    PSEUDO ELEMENTS
-***********************************************************************************************************************/
-.pseudo-elements {}
+  & .pseudo-classes {
+    & .pseudo-hover:hover {
+      background-color: peachpuff;
+    }
 
-/***********************************************************************************************************************
-    PSEUDO CLASSES
-***********************************************************************************************************************/
-.pseudo-classes {}
+    & .pseudo-activ:active {
+      background-color: peachpuff;
+    }
+  }
 
-/***********************************************************************************************************************
-    COMBINATORS
-***********************************************************************************************************************/
-.combinators {}
+  & .pseudo-elements {
+    & p::before {
+      content: "Note: ";
+      font-weight: bold;
+      color: red;
+    }
+
+    & p::after {
+      content: " [Read more]";
+      font-style: italic;
+      color: blue;
+    }
+  }
+
+  & .descendant-selectors {
+    & p {
+      background-color: peachpuff;
+    }
+  }
+
+  & .child-selectors {
+    & > p {
+      background-color: peachpuff;
+    }
+  }
+
+  & .adjacent-sibling-selectors {
+    & div {
+      border: 4px solid;
+    }
+
+    & div + p{
+      background-color: peachpuff;
+      color: blue;
+    }
+  }
+
+  & .general-sibling-selectors {
+    & div {
+      border: 4px solid;
+    }
+
+    & div ~ p{
+      background-color: peachpuff;
+      color: blue;
+    }
+  }
+
+  & .combinators {}
+}
 
 /***********************************************************************************************************************
     COLORS
